--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.bgLight {
+  background-color: rgb(218, 216, 216)!important;
+}
+.miniShadow {
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.2)!important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar{
+  padding-top: 5%;
+  width: 22%;
+  z-index: 1;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  position: absolute;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.content{
+  width: 78%;
+  position: absolute;
+  right: 0;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text_for_delete{
+  color: rgb(240, 20, 20)
 }
 
-.App-link {
-  color: #61dafb;
+.nav_link_r{
+  text-decoration: none !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.td_contact_user{
+  
+  box-shadow: none;
+  transition: 100ms;
+  color: #4d5053;
+}
+.td_contact_user:hover{
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.2);
+  transition: 100ms;
+  color: #e4bd50;
+}
+
+.add_button{
+  margin-top: 20px;
+  background-color: #e4bd50 !important;
+  color: aliceblue !important;
+  border-radius: 30px !important;
+}
+
+.inp_add_contact{
+  border-top: none !important;
+  border-right: none !important;
+  border-left: none !important;
+  border-bottom: 1px solid black !important;
 }
